# serial_ros

./: README.md  log.md  test.sh
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: serial_test.pc
devel/lib/serial_test/: serial_t
devel/share/serial_test/cmake/: serial_testConfig.cmake
libftd2XX/release/examples/BitMode/: bitmode-dynamic  bitmode-static
libftd2XX/release/examples/EEPROM/erase/: erase
libftd2XX/release/examples/Events/: events
libftd2XX/release/examples/LargeRead/: largeread  main.c
libftd2XX/release/examples/MultiThread/: multi
libftd2XX/release/examples/SetVIDPID/: setVIDPID
libftd2XX/release/examples/Simple/: main.c  simple-dynamic  simple-static
libftd2XX/release/examples/Timeouts/: timeouts
libftd2XX/release/examples/loopback/: loopback
libftd2XX/release/examples/static/: main.c  static_link
libftd2XX/release/examples/test/: Makefile  main.c  test
libftd2XX/release/examples/write/: write
src/pai_msgs/: package.xml
src/serial_test/: CMakeLists.txt  package.xml
src/serial_test/include/: lively_serial.h  motor_struct.h  serial_struct.h
src/serial_test/include/hardware/: canboard.h  canport.h  motor.h  robot.h
src/serial_test/launch/: serial_test.launch
src/serial_test/robot_param/: 10dof_HPM5361_model_P_Hector_params.yaml  10dof_STM32H730_model_P_Hector_params copy.yaml  10dof_model_P_orin_params.yaml  12dof_STM32H730_model_P_Orin_params.yaml  18dof_model_H_params.yaml  8dof_STM32H730_model_P_Orin_params.yaml
src/serial_test/src/: lively_serial.cc  serial_struct.cpp  serial_t.cpp
src/serial_test/src/hadware/: motor.cc
src/serialport/: CMakeLists.txt  package.xml
src/serialport/include/: livelybot_serial.h
src/serialport/include/IOport/: IOport.h
src/serialport/include/serialport/: errorClass.h  serialport.h
src/serialport/src/: livelybot_serial.cc  test.cpp
src/serialport/src/serialport/: serialport.cc
(+9 files in other folders)
